2009-01-16  Neal H. Walfield  <neal@gnu.org>

	* btree.h (BTREE_NP): Cast (__BN_NODE_PTR).PTR to a uintptr_t
	before using it.

2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* btree.h (find_first): New function.
	(BTREE_CLASS): Generate a find_first function.
	* t-find-first.c (region_compare): New file.
	* Makefile.am (TESTS): Add t-find-first.
	(check_PROGRAMS): Likewise.
	(t_find_first_SOURCES): New variable.
	(t_find_first_CPPFLAGS): Likewise.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* btree.c: Remove dead code.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* headers.m4: Don't create an empty
	libhurd-btree/libhurd-btree.alibhurd-btree/libhurd-btree.a.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
	Create symbolic link to package's library in `sysroot/lib/'.
	* Makefile.am: When building package's libraries, differentiate between
	[ENABLE_TESTS] with respect to build flags.

	* Makefile.am (btree_test_CPPFLAGS): Remove special `printf' handling.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(libhurd_btree_a_CPPFLAGS): Replace use of above with
	$(USER_CPPFLAGS).
	(libhurd_btree_a_CFLAGS): New variable.
	(btree_test_CPPFLAGS): Replace use $(COMMON_CPPFLAGS) with
	$(CHECK_CPPFLAGS).

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* btree.h (BTREE_(check_tree_internal)) [!NDEBUG && !NCHECKS]:
	Only declare in this case.
	(BTREE_check_tree_internal_): Fix argument names.
	* btree.c (BTREE_(check_tree_internal)) [!NDEBUG && !NCHECKS]: 
	Only define in this case.
	* Makefile.am (AM_CPPFLAGS): Rename from this...
	(COMMON_CPPFLAGS): ... to this.  Update users.
	(libhurd_btree_a_CPPFLAGS): Add -DNCHECKS.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* btree.h (BTREE_(insert)) [!NDEBUG]: Assert that the node
	pointers are clear.
	* btree.c (BTREE_(detach)) [!NDEBUG]: Clear ROOT.
	* btree-test.c (main): Clear allocated nodes.
